--- a/src/app/pages/tasks/tasks.component.html
+++ b/src/app/pages/tasks/tasks.component.html
@@ -1,5 +1,5 @@
 <h2>Tasks</h2>
-<form [formGroup]="taskForm" (ngSubmit)="addTask()">
+<!-- <form [formGroup]="taskForm" (ngSubmit)="addTask()">
   <input type="text" placeholder="Nova tarefa" formControlName="title" />
   <div *ngIf="taskForm.controls.title.touched && taskForm.controls.title.invalid">
     <small *ngIf="taskForm.controls.title.errors?.['required']">
@@ -33,4 +33,30 @@
 
     <button (click)="removeTask(task.id)">🗑</button>
   </li>
-</ul>
+</ul> -->
+
+<section class="tasks">
+
+  <input
+    #taskInput
+    placeholder="Nova tarefa"
+    (keyup.enter)="addTask(taskInput.value); taskInput.value = ''"
+  />
+
+  <ul>
+    <li *ngFor="let task of tasks$ | async; trackBy: trackById">
+      <input
+        type="checkbox"
+        [checked]="task.completed"
+        (change)="toggle(task)"
+      />
+
+      <span [class.done]="task.completed">
+        {{ task.title }}
+      </span>
+
+      <button (click)="remove(task)">X</button>
+    </li>
+  </ul>
+
+</section>
