--- a/src/app/pages/tasks/tasks.component.html
+++ b/src/app/pages/tasks/tasks.component.html
@@ -1,8 +1,8 @@
 <h2>Tasks</h2>
 
-<section class="tasks">
+<!-- <section class="tasks">
 
-  <!-- ADD TASK FORM -->
+  ADD TASK FORM
   <form (ngSubmit)="addTask()" [formGroup]="addTaskForm">
     <input
       type="text"
@@ -20,14 +20,14 @@
     </button>
   </form>
 
-  <!-- SEARCH -->
+  SEARCH
   <input
     type="text"
     placeholder="Buscar tarefas"
     [formControl]="searchControl"
   />
 
-  <!-- TASK LIST -->
+  TASK LIST
   <ul>
     <li *ngFor="let task of tasks$ | async; trackBy: trackById">
 
@@ -45,5 +45,28 @@
 
     </li>
   </ul>
+</section> -->
 
+<section class="tasks">
+  <input
+    #taskInput
+    placeholder="Nova tarefa"
+    (keyup.enter)="add(taskInput.value); taskInput.value = ''"
+  />
+
+  <ul>
+    <li *ngFor="let task of tasks$ | async; trackBy: trackById">
+      <input
+        type="checkbox"
+        [checked]="task.completed"
+        (change)="toggle(task.id)"
+      />
+
+      <span [class.done]="task.completed">
+        {{ task.title }}
+      </span>
+
+      <button (click)="remove(task.id)">X</button>
+    </li>
+  </ul>
 </section>
